--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -122,4 +122,13 @@ const { title, description, image, type, canonical, noindex } = Astro.props;
   p {
     line-height: 1.5;
   }
+
+  .grid-background {
+    background-image:
+      linear-gradient(to bottom, rgba(255, 255, 255, 0.05) 1px, transparent 1px),
+      linear-gradient(to right, rgba(255, 255, 255, 0.05) 1px, transparent 1px);
+    background-size: 50px 50px;
+    mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.4) 40%, rgba(0, 0, 0, 0) 70%);
+    -webkit-mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.4) 40%, rgba(0, 0, 0, 0) 70%);
+  }
 </style>
