--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -22,8 +22,8 @@ const {
 } = Astro.props;
 ---
 
-<section class="relative bg-white overflow-hidden">
-  <div class="relative w-full mx-auto px-4 sm:px-6 lg:px-8 py-16 lg:py-20" style="max-width: 1400px;">
+<section class="relative bg-white overflow-hidden pt-24 pb-16 lg:pt-32 lg:pb-24">
+  <div class="relative w-full mx-auto px-4 sm:px-6 lg:px-8" style="max-width: 1400px;">
     <div class="grid lg:grid-cols-2 gap-12 lg:gap-20 items-center">
       <div class="space-y-6 animate-fade-in-up">
         {subtitle && (
