--- a/src/pages/case-studies.astro
+++ b/src/pages/case-studies.astro
@@ -58,7 +58,7 @@ import Button from '../components/Button.astro';
           Join the growing list of companies transforming their operations with Helm's offshore talent.
         </p>
         <Button
-          href="/contact"
+          openModal={true}
           variant="primary"
           size="lg"
           track="case-studies-cta"
