--- a/src/pages/coaching.astro
+++ b/src/pages/coaching.astro
@@ -191,7 +191,7 @@ const coachingTestimonials = [
           Join over 5,000 companies that have achieved alignment, accountability, and extraordinary growth.
         </p>
         <Button
-          href="/contact"
+          openModal={true}
           variant="primary"
           size="lg"
           track="coaching-cta"
