--- a/src/pages/how-it-works.astro
+++ b/src/pages/how-it-works.astro
@@ -111,7 +111,7 @@ const steps = [
         </p>
         <div class="flex flex-col sm:flex-row gap-4 justify-center">
           <Button
-            href="/contact"
+            openModal={true}
             variant="primary"
             size="lg"
             track="how-it-works-cta"
