--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -60,7 +60,7 @@ const howItWorksSteps = [
   <Hero
     title="We find hungry, humble, smart A-players that cost less than 50% of their U.S. equivalent"
     description="We're a staffing agency that finds the best offshore talent for your business."
-    primaryCTA={{ text: 'Request a quote', href: '/contact' }}
+    primaryCTA={{ text: 'Request a quote', openModal: true }}
     secondaryCTA={{ text: 'Learn more', href: '/how-it-works' }}
     image={heroImage}
     imageAlt="Professional executive assistant working remotely"
